--- a/services.html
+++ b/services.html
@@ -6,7 +6,11 @@
 
 <body>
     <h2>Bundle 1:Exercise 2; Services</h2>
-    
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Molestias assumenda perspiciatis in quibusdam similique, 
+        quisquam maiores eos ex, magni repudiandae quo doloribus 
+        illum dolorum officiis minus adipisci? Id,
+         voluptatibus consequuntur?</p>
     
 </body>
 </html>
