change made on home

--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-    <h2>Bundle 1:Exercise 2</h2>
+    <h2>Bundle 3:Exercise 2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum nostrum obcaecati excepturi quae eveniet laboriosam consequuntur, autem laudantium, officiis eaque perferendis, et placeat adipisci sed quidem magnam voluptas ullam velit?</p>
     
     
 </body>
