new changses at home.html

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 
 <body>
     <h2>Bundle 3: exercise2</h2>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, praesentium.</p>
     
     
 </body>
