--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
         <ul>
           <li><a href="#">Gmail</a></li>
           <li><a href="#">Images</a></li>
-          <li><a href="#">Google apps</a></li>
+          <li><a href="#">RDB</a></li>
           <li><a href="#">Google account</a></li>
         </ul>
       </div> 
