adding phrase asked

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <h2>Bundle 3: exercise2</h2>
+    <h2>Our new Restauent</h2>
     <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, praesentium.</p>
     
     
